--- a/omd-labs-ubuntu/Dockerfile
+++ b/omd-labs-ubuntu/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:16.04
 MAINTAINER Simon Meggle<simon.meggle@consol.de>
 EXPOSE 80 443 22 4730 5666
 
-ENV REFRESHED 20161207
+ENV REFRESHED 20170207
+ENV OMDVERSION 2.20
 ARG SITENAME=demo
 
 
@@ -17,9 +18,9 @@ RUN apt-get update && \
     apt-get install -y lsof vim git openssh-server tree tcpdump libevent-2.0-5
 
 RUN gpg --keyserver keys.gnupg.net --recv-keys F8C1CA08A57B9ED7 && gpg --armor --export F8C1CA08A57B9ED7 | apt-key add - && \
-    echo "deb http://labs.consol.de/repo/testing/ubuntu $(cat /etc/lsb-release | grep DISTRIB_CODENAME | cut -d'=' -f2) main" >> /etc/apt/sources.list && \
+    echo "deb http://labs.consol.de/repo/stable/ubuntu $(cat /etc/lsb-release | grep DISTRIB_CODENAME | cut -d'=' -f2) main" >> /etc/apt/sources.list && \
     apt-get update && \
-    apt-get install -y omd-labs-edition-daily &&  \
+    apt-get install -y omd-${OMDVERSION}-labs-edition &&  \
     apt-get clean
 
 RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
